--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                         <ul class="expand">
                                             <li class="cbp-l-caption-title">Pair 3D | iOS Development</li>
                                             <li class="cbp-l-caption-desc">Bring the showroom to your living room. Augmented Reality platform to see how furniture would look in your space before you buy it.</li>
-                                            <li class="cbp-l-icon"><a href="http://pair3d.com/"><i class="icon-link"></i></a></li>
+                                            <li class="cbp-l-icon"><a href="https://pair3d.com/"><i class="icon-link"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                         <ul class="expand">
                                             <li class="cbp-l-caption-title">Zipkick | iOS Development</li>
                                             <li class="cbp-l-caption-desc">Authentic travel reviews from the worlds top travel influencers. Available on the App Store</li>
-                                            <li class="cbp-l-icon"><a href="http://zipkick.com"><i class="icon-link"></i></a></li>
+                                            <li class="cbp-l-icon"><a href="https://zipkick.com"><i class="icon-link"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -205,7 +205,7 @@
                                         <ul class="expand">
                                             <li class="cbp-l-caption-title">CODE2040 2014 | Fellow</li>
                                             <li class="cbp-l-caption-desc">Nonprofit organization that creates pathways to success in technology for Blacks and Latino/as. Workshops on entrepreneurship and tech topics.</li>
-                                            <li class="cbp-l-icon"><a href="http://code2040.org/about"><i class="icon-link"></i></a></li>
+                                            <li class="cbp-l-icon"><a href="https://code2040.org/about"><i class="icon-link"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -246,7 +246,7 @@
                                         <ul class="expand">
                                             <li class="cbp-l-caption-title">Ciencia PR Volunteer</li>
                                             <li class="cbp-l-caption-desc">Seeds of Success program for middle school girls to explore careers in STEM </li>
-                                            <li class="cbp-l-icon"><a href="http://www.cienciapr.org/en/user/xiomara7-0"><i class="icon-link"></i></a></li>
+                                            <li class="cbp-l-icon"><a href="https://www.cienciapr.org/en/user/xiomara7-0"><i class="icon-link"></i></a></li>
                                             
                                         </ul>
                                     </div>
@@ -287,7 +287,7 @@
                                         <ul class="expand">
                                             <li class="cbp-l-caption-title">#includeathon Organizer</li>
                                             <li class="cbp-l-caption-desc">Include girls's hackathon</li>
-                                            <li class="cbp-l-icon"><a href="http://hackathon.includegirls.com"><i class="icon-link"></i></a></li>
+                                            <li class="cbp-l-icon"><a href="https://hackathon.includegirls.com"><i class="icon-link"></i></a></li>
                                             <!-- <li class="cbp-l-icon"><a href="projects/project6.html"><i class="icon-link"></i></a></li> -->
                                             <!-- <li class="cbp-l-icon"><a href="https://www.youtube.com/watch?v=9No-FiEInLA"  class="cbp-lightbox"><i class="ion-ios-videocam"></i></a></li> -->
                                         </ul>
@@ -393,7 +393,7 @@
                                         <ul class="expand">
                                             <li class="cbp-l-caption-title">Featured in Startups of Puerto Rico's podcast</li>
                                             <li class="cbp-l-caption-desc">Empresarios con Pablo Tirado</li>
-                                            <li class="cbp-l-icon"><a href="http://www.startupsofpuertorico.com/episode-6-entrevista-con-xiomara-figueroa/"><i class="icon-link"></i></a>
+                                            <li class="cbp-l-icon"><a href="https://www.startupsofpuertorico.com/episode-6-entrevista-con-xiomara-figueroa/"><i class="icon-link"></i></a>
                                         </ul>
                                     </div>
                                 </div>
@@ -498,7 +498,7 @@
         <script src="js/plugins/cubeportfolio.min.js"></script>
         <script src="js/plugins/owlcarousel.min.js"></script>
         <script src="js/plugins/tweetie.min.js"></script>
-        <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="js/plugins/gmap3.min.js"></script>
         <script src="js/plugins/wow.min.js"></script>
         <script src="js/plugins/counterup.min.js"></script>
