--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Xiomara Figueroa</title>
-
+  <p class="subheading wow fadeInUp">Software Engineer | Global Shaper</p>
   <!-- Stlylesheet -->
   <link href="css/style.css" rel="stylesheet" type="text/css" />
 
