--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="col-md-12 text-center">
           <h3 class="section-title wow fadeInUp">Xiomara</h3>
-          <p class="subheading wow fadeInUp">Software Engineer | Global Shaper</p>
+          <p class="subheading wow fadeInUp">| Software Engineer | Global Shaper |</p>
         </div>
 
         <!-- Start Get Connected -->
